# tdlib-json-cli

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  types.json
.github/workflows/: build.yml  update.yml
tsd-generator/: index.js  package.json
types-generator/: Gemfile  Rakefile  index.js  package-lock.json  package.json
types-generator/config/: application.rb
types-generator/lib/: types_generator.rb
